# agent-researcher

./: .gitignore  PLAN_PHASE2.md  README-no-tecnico.md  README.md  projects.json  pyproject.toml
agente_langgraph/: .env.example  README.md  __init__.py  agente.py  api.py  chats.py  checkpoints.db-shm  checkpoints.db-wal  local_tools.py  mcp_client.py  pdf_index.json  projects.py  requirements.txt  state.py  worker.py
front_agente/: DESIGN_SPEC.md  README.md  index.html  package-lock.json  package.json
front_agente/src/: App.tsx  index.css
front_hechos/: README.md  index.html  package-lock.json  package.json
front_hechos/src/: App.tsx  index.css
mcp_hechos/: README.md  requirements.txt  server.py
mcp_hechos/hechos_lancedb/hechos.lance/_transactions/: 0-096f44ba-a650-4cf8-bc07-dc5193852185.txn  0-c75957fa-ac19-4387-ad34-51cb04cc39e8.txn  1-4ea82cb5-a05a-4954-a5f2-d78e61052d28.txn  1-b09eca8e-990d-49a8-92c7-f5b02e749dd4.txn  10-40191094-426c-4ddc-9101-287b4f6a06e8.txn  10-bd41e6d5-2f0b-4a1c-b05d-95d231554303.txn  11-389f9e37-b38a-4fc9-a86b-49e3ec344757.txn  11-3ac63946-60cf-4d68-9571-0f97017286c4.txn  12-b4849283-f96a-4e3a-9f1b-a5dbd6225ba6.txn  13-c6292fbe-0949-46c7-a105-c3105145a016.txn  14-f38149c7-89b1-4ed1-aaf4-5e9b17dccc2d.txn  15-0b12fcdb-8d81-4068-85b3-9460b110fbcd.txn  16-f4e572f2-e1cf-48d0-9791-9d1c9c160794.txn  17-502da56b-aef7-411a-bc63-b2c3e532f35c.txn  18-552b837b-1c8d-4f32-94fb-8574781a2684.txn  19-804ac659-a707-4f76-bd2e-4c63afcf5605.txn  2-0d01e64e-eed6-4e0e-bde1-b09a75dda0e2.txn  2-d6b3ffc7-0d1b-4b45-ae55-b36636add878.txn  (+16 more)
(+119 files in other folders)
