[project]
name = "agent-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "lancedb>=0.30.1",
    "langchain>=1.2.13",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mcp[cli]>=1.0.0",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
    "trafilatura>=2.0.0",
    "uvicorn>=0.42.0",
]
